dataset1235/2025-2/2318198438/users/2190833977/executions/1897677159_704983377.log
== SUBMISSION (2025-08-21 00:59:28)
-- CODE: 
X= int(input())
Y= int(input())
Q= X // Y
R= X % Y
div = X / Y
prod = Y ** 3
print(Q)
print (R)
print(div)
print(prod)
print(pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(pot)
          ^^^
NameError: name 'pot' is not defined. Did you mean: 'pow'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(pot)
          ^^^
NameError: name 'pot' is not defined. Did you mean: 'pow'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(pot)
          ^^^
NameError: name 'pot' is not defined. Did you mean: 'pow'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(pot)
          ^^^
NameError: name 'pot' is not defined. Did you mean: 'pow'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(pot)
          ^^^
NameError: name 'pot' is not defined. Did you mean: 'pow'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(pot)
          ^^^
NameError: name 'pot' is not defined. Did you mean: 'pow'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:27:13)
-- CODE: 
X= int(input())
Y= int(input())
Q= X // Y
R= X % Y
div = X / Y
prod = X * Y
pot = Y ** 3
print(Q)
print (R)
print(div)
print(prod)
print(pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:01:06)
-- CODE: 
X= int(input())
Y= int(input())
Q= X // Y
R= X % Y
div = X / Y
prod = X * Y
pot = Y ** 3
print(Q)
print (R)
print(div)
print(prod)
print(pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:33:25)
-- CODE: 
X= int(input())
Y= int(input())
Q= X // Y
R= X % Y
div = X / Y
prod = X * Y
pot = Y ** 3
print(Q)
print (R)
print(div)
print(prod)
print(pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 00:27:11)
-- CODE: 
X= int(input())
Y= int(input())
Q= X // Y
R= X % Y
div = X / Y
prod = X * Y
pot = Y ** 3
print(Q)
print (R)
print(div)
print(prod)
print(pot)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 00:58:45)
-- CODE: 
X= int(input())
Y= int(input())
Q= X // Y
R= X % Y
div = X / Y
prod = Y ** 3
print(Q)
print (R)
print( div)
print(prod)
print(pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(pot)
          ^^^
NameError: name 'pot' is not defined. Did you mean: 'pow'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(pot)
          ^^^
NameError: name 'pot' is not defined. Did you mean: 'pow'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(pot)
          ^^^
NameError: name 'pot' is not defined. Did you mean: 'pow'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(pot)
          ^^^
NameError: name 'pot' is not defined. Did you mean: 'pow'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(pot)
          ^^^
NameError: name 'pot' is not defined. Did you mean: 'pow'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(pot)
          ^^^
NameError: name 'pot' is not defined. Did you mean: 'pow'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
